--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "@dcbartlett/seventy_maxims",
   "version": "1.0.1",
   "description": "The Seventy Maxims of Maximally Effective Mercenaries",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "prepublish": "npm run test",
+    "pretest": "npm run build",
     "test": "jest --"
   },
   "author": "Dennis Bartlett",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "typescript": "^4.3.2"
   },
   "dependencies": {}
 }
