--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepublish": "npm run test",
+    "prepublish": "npm run test && npm run version patch",
+    "version": "node incrementVersion",
     "pretest": "npm run build",
     "test": "jest --"
   },
